# mapf-splice

./: .gitignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
docs/: ARCHITECTURE.md  DEMO_AND_BLOG.md  V0_1.md
docs/architecture/: deterministic-lifelong-validation.md  local-scoped-recovery-with-active-nonparticipants.md  recovery-adg-bounded-prefix-admission.md
docs/assets/story-media/v0.1/: media-freeze.json
docs/storyboards/: V0_1_CAPTURE_STORYBOARD.md  V0_1_STORY_PLAYBACK_SPEC.md
docs/superpowers/plans/: 2026-07-10-confirmed-wait-for-graph.md
docs/superpowers/specs/: 2026-07-10-confirmed-wait-for-graph-design.md
scenarios/compact-four-robot/: map.txt  scenario.json
scenarios/compact-three-robot/: map.txt  review.json  scenario.json
schemas/: render-review.v0.1.schema.json  scenario.v0.1.schema.json  simulation-run.v0.1.schema.json  simulation-run.v0.2.schema.json
src/mapf_splice/: __init__.py  adg.py  communication.py  communication_proofs.py  confirm.py  deadlock.py  delay.py  dispatch.py  domain.py  inspect.py  lifelong.py  lifelong_run.py  mapf_pibt.py  planning.py  preview.py  recovery.py  render.py  replay.py  routing.py  run.py  scenario.py  simulation.py  tasking.py  trace.py  traffic.py  workload.py  world.py
src/mapf_splice/_vendor/pypibt/: PROVENANCE.md  __init__.py  mapf_utils.py
src/mapf_splice/web_inspector/: app.js  capture.css  index.html  playback.js  story-visuals.css  styles.css
tests/: test_adg.py  test_affected_scope.py  test_calibration.py  test_communication_proofs.py  test_confirm.py  test_deadlock.py  test_deadlock_scope.py  test_domain.py  test_inspect.py  test_lifelong_validation.py  test_mapf_pibt.py  test_planning.py  test_preview.py  test_recovery_admission.py  test_recovery_hero.py  test_recovery_planning.py  test_recovery_runtime.py  test_recovery_types.py  test_recovery_validation.py  test_render.py  test_replay.py  test_replay_recovery.py  test_routing.py  test_scenario.py  test_simulation.py  test_story_media.py  test_tasking_phase_goal.py  test_traffic.py  test_vendor_pypibt.py  test_web_browser.py  test_web_playback.py  test_world_and_tasks.py
tools/: calibrate_hero_scenario.py
tools/story_media/: README.md  capture_browser.mjs  capture_story_media.py
validation/lifelong/: four-robot-nonparticipant.json  random-k3-flow-seed590.json  random-k3-four-recoveries-seed1043.json  random-k3-one-recovery-seed202.json  random-k3-three-recoveries-seed213.json  random-k3-two-recoveries-seed615.json  safe-solver-failure.json  three-robot-delayed.json  three-robot-k3.json  three-robot-k4.json  three-robot-k5.json
