[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mapf-splice"
version = "0.0.0"
description = "On-demand MAPF deadlock recovery for continuous robot fleets"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "jsonschema>=4,<5",
  "pillow>=10,<13",
]

[project.scripts]
mapf-splice-render = "mapf_splice.render:main"
mapf-splice-run = "mapf_splice.run:main"
mapf-splice-inspect = "mapf_splice.inspect:main"

[dependency-groups]
dev = [
  "pytest>=8,<9",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mapf_splice"]

[tool.hatch.build.targets.wheel.force-include]
"schemas/simulation-run.v0.1.schema.json" = "mapf_splice/schemas/simulation-run.v0.1.schema.json"

[tool.hatch.build.targets.sdist]
include = ["src", "schemas", "tests", "tools", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
