[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mapf-splice"
version = "0.0.0"
description = "On-demand MAPF deadlock recovery for continuous robot fleets"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "jsonschema>=4,<5",
  "pillow>=10,<13",
]

[project.optional-dependencies]
# Scoped MAPF recovery. The vendored PIBT subset (src/mapf_splice/_vendor/pypibt)
# needs only NumPy; installed via `pip install mapf-splice[recovery]`.
recovery = [
  "numpy>=1.25,<3",
]

[project.scripts]
mapf-splice-render = "mapf_splice.render:main"
mapf-splice-run = "mapf_splice.run:main"
mapf-splice-inspect = "mapf_splice.inspect:main"
mapf-splice-lifelong = "mapf_splice.lifelong_run:main"
mapf-splice-communication-proofs = "mapf_splice.communication_proofs:main"

[dependency-groups]
dev = [
  "pytest>=8,<9",
  "ruff>=0.9,<1",
  # Recovery solver stack, so the full suite (incl. hero recovery) runs locally.
  "numpy>=1.25,<3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mapf_splice"]

[tool.hatch.build.targets.wheel.force-include]
"schemas/simulation-run.v0.2.schema.json" = "mapf_splice/schemas/simulation-run.v0.2.schema.json"
"src/mapf_splice/_vendor/pypibt/LICENSE" = "mapf_splice/_vendor/pypibt/LICENSE"
"src/mapf_splice/_vendor/pypibt/PROVENANCE.md" = "mapf_splice/_vendor/pypibt/PROVENANCE.md"

[tool.hatch.build.targets.sdist]
include = ["src", "schemas", "docs", "tests", "tools", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# Vendored upstream PIBT is kept verbatim; do not reformat it to our rules.
"src/mapf_splice/_vendor/**" = ["E", "F", "I", "UP", "N"]
